# turbosql

./: CHANGELOG.md  Cargo.toml  README.md  migrations.toml  package.json  rustfmt.toml  test.migrations.toml
.github/workflows/: ci.yml  publish.yml  publish_turbosql.yml  test_turbosql.yml
turbosql/: Cargo.toml  README-old.md  README.md  build.rs  migrations.toml  test.migrations.toml
turbosql-impl/: Cargo.toml  build.rs
turbosql-impl/src/: create.rs  delete.rs  insert.rs  lib.rs  select.rs  update.rs  upsert.rs
turbosql/src/: lib.rs  lib_inner.rs  mod_i53.rs
turbosql/tests/: integration_test.rs  ui.rs
turbosql/tests/ui/: macros.rs  macros.stderr  one.rs  one.stderr
turbosql_macros/: Cargo.toml
turbosql_macros/src/: create.rs  lib.rs
