[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
description = "Internal implementation details for Turbosql."
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbosql-impl"
repository = "https://github.com/trevyn/turbosql"
rust-version = "1.56"
version = "0.4.0"

[lib]
proc-macro = true

[dependencies]
fs2 = "0.4"
indoc = "1"
once_cell = "1.5"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
rusqlite = {version = "0.26.3", features = ["bundled", "blob", "column_decltype"]}
serde = {version = "1", features = ["derive"]}
syn = {version = "1.0.12", features = ["extra-traits", "full"]}
todo-or-die = {version = "0.1", features = ["github", "crate"], optional = true}
toml = "0.5"

[features]
# Needs to be set during parent crate tests
test = ["todo-or-die"]
