[package]
authors = ["The authors"]
categories = ["database"]
description = "An easy local data persistence layer, backed by SQLite."
documentation = "https://docs.rs/turbosql"
edition = "2021"
keywords = ["database", "sqlite", "sql"]
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbosql"
readme = "README.md"
repository = "https://github.com/trevyn/turbosql"
rust-version = "1.56"
version = "0.5.0"

[dependencies]
turbosql-impl = {path = "../turbosql-impl", version = "=0.5.0"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cfg-if = "1"
directories-next = "2"
itertools = "0.10"
log = "0.4"
once_cell = "1"
rusqlite = {version = "0.27", features = ["bundled", "blob"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
toml = "0.5"

[dev-dependencies]
rustversion = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
trybuild = {version = "1", features = ["diff"]}

[features]
test = ["turbosql-impl/test"]

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["test"]
