[package]
categories = ["database"]
description = "An easy local data persistence layer, backed by SQLite."
documentation = "https://docs.rs/turbosql"
edition = "2021"
keywords = ["database", "sqlite", "sqlite3", "sql"]
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbosql"
readme = "README.md"
repository = "https://github.com/trevyn/turbosql"
rust-version = "1.77"
version = "0.10.0"

[dependencies]
turbosql-impl = {path = "../turbosql-impl", version = "=0.10.0"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2"
log = "0.4"
once_cell = "1"
rusqlite = {version = "0.32", features = ["bundled", "blob"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
rustversion = "1"
tokio = {version = "1.23.1", features = ["rt-multi-thread", "macros"]}
trybuild = {version = "1", features = ["diff"]}

[features]
sqlite-compat-no-strict-tables = ["turbosql-impl/sqlite-compat-no-strict-tables"]
test = ["turbosql-impl/test"]

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["test"]
