[package]
categories = ["database"]
description = "An easy local data persistence layer, backed by SQLite."
documentation = "https://docs.rs/turbosql"
edition = "2021"
keywords = ["database", "sqlite", "sqlite3", "sql"]
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbosql"
readme = "README.md"
repository = "https://github.com/trevyn/turbosql"
rust-version = "1.82"
version = "0.13.0"

[dependencies]
turbosql-impl = {path = "../turbosql-impl", version = "=0.13.0"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2.0.0"
log = "0.4.21"
once_cell = "1.18.0"
rusqlite = {version = "0.35.0", features = ["bundled", "blob"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.0"
thiserror = "1.0.7"
toml = "0.8.0"

[dev-dependencies]
rustversion = "1.0.0"
tokio = {version = "1.23.1", features = ["rt-multi-thread", "macros"]}
trybuild = {version = "1.0.58", features = ["diff"]}

[features]
sqlite-compat-no-strict-tables = ["turbosql-impl/sqlite-compat-no-strict-tables"]
test = ["turbosql-impl/test"]
load_extension = ["rusqlite/load_extension"]
loadable_extension = ["rusqlite/loadable_extension"]
backup = ["rusqlite/backup"]
functions = ["rusqlite/functions"]
window = ["rusqlite/window"]
trace = ["rusqlite/trace"]
blob = ["rusqlite/blob"]
limits = ["rusqlite/limits"]
serde_json = ["rusqlite/serde_json"]
chrono = ["rusqlite/chrono"]
time = ["rusqlite/time"]
jiff = ["rusqlite/jiff"]
url = ["rusqlite/url"]
bundled = ["rusqlite/bundled"]
sqlcipher = ["rusqlite/sqlcipher"]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
bundled-sqlcipher-vendored-openssl = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
hooks = ["rusqlite/hooks"]
preupdate_hook = ["rusqlite/preupdate_hook"]
unlock_notify = ["rusqlite/unlock_notify"]
vtab = ["rusqlite/vtab"]
series = ["rusqlite/series"]
csvtab = ["rusqlite/csvtab"]
array = ["rusqlite/array"]
i128_blob = ["rusqlite/i128_blob"]
uuid = ["rusqlite/uuid"]
session = ["rusqlite/session"]
extra_check = ["rusqlite/extra_check"]
column_decltype = ["rusqlite/column_decltype"]
collation = ["rusqlite/collation"]
serialize = ["rusqlite/serialize"]
rusqlite-macros = ["rusqlite/rusqlite-macros"]


[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["test"]
