[package]
authors = ["Eden <rust@eden2.com>"]
description = "Macros for Turbosql"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "turbosql_macros"
publish = false
version = "0.0.2"

[lib]
proc-macro = true

[dependencies]
# @deps macros
fs2 = "0.4.3"
nom-sql = "=0.0.11"
once_cell = "1.5.2"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.24"
quote = "1.0.8"
rusqlite = {version = "0.24.2", features = ["bundled", "blob", "column_decltype"]}
serde = {version = "1.0.118", features = ["derive"]}
syn = {version = "1.0.58", features = ["extra-traits", "full"]}
toml = "0.5.8"

[features]
# See: https://github.com/rust-lang/rust/issues/45599
test = []
